# advent-of-code-2022

./: .gitignore  Cargo.toml  rustfmt.toml
src/: day01.py  day05.py  main.rs  utils.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs
