[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
automod = "1.0"
bytemuck = {version="1.12", features=["extern_crate_std"]}
itertools = "0.10"
rand = "0.8"

[profile.release]
lto = "fat"
panic = "abort"